creation du process renouvellement (copier/coller style...)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -176,6 +176,23 @@
     <script src="scripts/app/usager/etudier/final/final.controller.js"></script>
     <script src="scripts/app/usager/etudier/rdv/rdv.js"></script>
     <script src="scripts/app/usager/etudier/rdv/rdv.controller.js"></script>
+    
+    <!-- GROS COPIER COLLER DE LA MORT POUR LE RENOUVELEMENT -->
+    <script src="scripts/app/usager/renouveler/renouveler.js"></script>
+    <script src="scripts/app/usager/renouveler/renouveler.controller.js"></script>
+    <script src="scripts/app/usager/renouveler/identity/identity.js"></script>
+    <script src="scripts/app/usager/renouveler/identity/identity.controller.js"></script>
+    <script src="scripts/app/usager/renouveler/address/address.js"></script>
+    <script src="scripts/app/usager/renouveler/address/address.controller.js"></script>
+    <script src="scripts/app/usager/renouveler/project/project.js"></script>
+    <script src="scripts/app/usager/renouveler/project/project.controller.js"></script>
+    <script src="scripts/app/usager/renouveler/summary/summary.js"></script>
+    <script src="scripts/app/usager/renouveler/summary/summary.controller.js"></script>
+    <script src="scripts/app/usager/renouveler/payment/payment.js"></script>
+    <script src="scripts/app/usager/renouveler/payment/payment.controller.js"></script>
+    <script src="scripts/app/usager/renouveler/final/final.js"></script>
+    <script src="scripts/app/usager/renouveler/final/final.controller.js"></script>
+    
     <script src="scripts/app/agent/agent.js"></script>
     <script src="scripts/app/agent/control/control.js"></script>
     <script src="scripts/app/agent/control/control.controller.js"></script>
