--- a/src/main/webapp/scripts/app/agent/etudier/validation/validation.html
+++ b/src/main/webapp/scripts/app/agent/etudier/validation/validation.html
@@ -1,7 +1,7 @@
 <div ng-cloak>
     <div class="row">
     	<div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1 title-underscore">
-    		<h4 translate="validation.form.title" translate-values="{ studentName: '{{studentName}}'}"></h4>
+    		<h4 translate="etudier.title.agent.{{demande.type}}" translate-values="{ studentName: '{{studentName}}'}"></h4>
    		</div>
     </div>
 	<br>
@@ -16,7 +16,7 @@
 		</div>
 		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 validation-form">
 			<img src="assets/images/checkbox_checked.png">
-			<span translate="validation.form.validate.f" translate-values="{validationDate: '{{getFormattedDate(demande.rdvDate)}}', validationAuthor: 'Ambassade de France à Séoul'}">validate</span>
+			<span translate="validation.form.validate.f" translate-values="{validationDate: '{{getFormattedDate(identityValidationDate)}}', validationAuthor: 'Ambassade de France à Séoul'}">validate</span>
 		</div>
 	</div>
 	<div class="row" ng-show="identityOpened">
@@ -101,7 +101,7 @@
 		</div>
 		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 validation-form">
 			<img src="assets/images/checkbox_checked.png">
-			<span translate="validation.form.validate.h" translate-values="{validationDate: '{{getFormattedDate(moment())}}', validationAuthor: 'Gendarmerie'}">validate</span>
+			<span translate="validation.form.validate.h" translate-values="{validationDate: '{{getFormattedDate(demande.recevabilityDate)}}', validationAuthor: 'Police / Gendarmerie'}">validate</span>
 		</div>
 	</div>
 	<div class="row">
@@ -122,8 +122,10 @@
 	</div>
 	<div class="row" ng-show="projectOpened">
 		<div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1">
-			<div>
-			<ul><li translate="validation.form.preinscription" translate-values="{confirmationDate: '{{getFormattedDate(moment().subtract(4, 'd'))}}', confirmationAuthor: 'Campus France'}">validate</li></ul>
+			<div ng-if="demande.type == 'Premiere'">
+				<ul>
+					<li translate="validation.form.preinscription" translate-values="{confirmationDate: '{{getFormattedDate(moment().subtract(4, 'd'))}}', confirmationAuthor: 'Campus France'}">validate</li>
+				</ul>
 			</div>
 			<div class="row validation-visualization-row" ng-class="{'opened': projectOpened}">
 				<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
@@ -207,7 +209,16 @@
 			</div>
 		</div>
 		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 validation-form">
-			<span translate="validation.form.noHistory">No history</span>
+			<span translate="validation.form.noHistory" ng-if="demande.type == 'Premiere'">No history</span>
+		</div>
+	</div>
+	<div class="row" ng-if="demande.type == 'renouvellement'">
+		<div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1">
+			<div>
+				<ul>
+					<li><a href="#" translate="validation.form.history.list" translate-values="{startDate: '{{historyStartDate}}', endDate: '{{historyEndDate}}'}">validate</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<br>
