--- a/src/main/webapp/scripts/app/usager/etudier/final/final.html
+++ b/src/main/webapp/scripts/app/usager/etudier/final/final.html
@@ -16,11 +16,11 @@
 	<br>
 	<div class="row">
 		<div class="col-xs-10 col-xs-offset-1">
-			<p style="line-height: 2" translate="final.form.text1">Text1</p>
+			<p style="line-height: 2" translate="final.form.recevability">Recevability</p>
 			<br>
-			<p style="line-height: 2" translate="final.form.text2">Text2</p>
+			<p style="line-height: 2" translate="final.form.rdv">Rdv</p>
 			<br>
-			<p style="line-height: 2" translate="final.form.text3">Text3</p>
+			<p style="line-height: 2" translate="final.form.decision">Decision</p>
 		</div>
 	</div>
 	<br>
